Revise README for LibraryFX frontend changes
Updated the README to reflect the new frontend stack and features.